# clawlight-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  download-stats.yml  release.yml
assets/: opencode-plugin.js  popover.html
homebrew/: clawlight.rb.template
scripts/: download-stats.sh  flash.sh
src/: app.rs  codex.rs  config.rs  copilot.rs  harness.rs  hook.rs  led.rs  main.rs  menubar.rs  net.rs  notification.rs  ota.rs  popover.rs  session.rs  spawn.rs  state.rs  terminal.rs  ui.rs  usage.rs
tests/: cli.rs  codex_lifecycle.rs  copilot_lifecycle.rs  event_lifecycle.rs  hook_lifecycle.rs  install.rs
tests/js/: exit-child.mjs  opencode-integration.test.mjs
