[package]
name = "clawlight"
version = "0.7.0"
edition = "2021"
description = "TUI dashboard and menu bar / system tray indicator for monitoring Claude Code sessions"
license = "MIT"
repository = "https://github.com/clawlight/clawlight-cli"
homepage = "https://github.com/clawlight/clawlight-cli"
keywords = ["claude", "cli", "sessions", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "clawlight"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tray-icon = "0.19"
tao = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
serialport = "4"

# Desktop notifications on non-macOS platforms (WinRT toast / freedesktop).
[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

# Console-window hiding + autostart registry access for Windows.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"
